# ecommerce

./: package-lock.json  package.json  pyproject.toml
ecommerce/: settings.py  urls.py
ecommerce/apps/authentication/: admin.py  models.py  serializers.py  urls.py  views.py
ecommerce/apps/authentication/migrations/: 0001_initial.py  0002_alter_group_name_alter_group_permissions.py
ecommerce/apps/commerce/: admin.py  models.py  serializers.py  urls.py  views.py
ecommerce/apps/commerce/migrations/: 0001_initial.py  0002_cart_cartitem_order_orderitem_and_more.py  0003_remove_order_payment_method_alter_cart_user.py
ecommerce/apps/common/: models.py  utils.py
